# vct

./: .gitignore  Cargo.toml
crates/vct_cfg/: Cargo.toml  README.md
crates/vct_cfg/src/: lib.rs
crates/vct_os/: Cargo.toml  README.md
crates/vct_os/src/: cfg.rs  lib.rs
crates/vct_os/src/sync/: mod.rs  once_flag.rs
crates/vct_os/src/thread/: mod.rs
crates/vct_os/src/time/: mod.rs
crates/vct_ptr/: Cargo.toml  README.md
crates/vct_ptr/src/: lib.rs
crates/vct_reflect/: Cargo.toml
crates/vct_reflect/derive/: Cargo.toml  README.md
crates/vct_reflect/derive/src/: lib.rs  type_path.rs
crates/vct_reflect/derive/src/derive_data/: impls.rs  mod.rs  reflect_derive.rs  reflect_enum.rs  reflect_meta.rs  reflect_opaque.rs  reflect_struct.rs  reflect_type_path.rs
crates/vct_reflect/derive/src/derive_data/attributes/: custom_attributes.rs  field_attributes.rs  flags.rs  mod.rs  reflect_docs.rs  type_attributes.rs
crates/vct_reflect/derive/src/impls/: common_imps.rs  impl_enum.rs  impl_opaque.rs  impl_struct.rs  impl_struct_clone.rs  impl_struct_from_reflect.rs  impl_trait_get_type_traits.rs  impl_trait_reflect.rs  impl_trait_type_path.rs  impl_trait_typed.rs  impl_tuple_struct.rs  impl_unit.rs  match_reflect_impls.rs  mod.rs
crates/vct_reflect/derive/src/path/: fp.rs  info.rs  mod.rs  ops.rs  registry.rs
crates/vct_reflect/derive/src/reflect_alias/: mod.rs
crates/vct_reflect/derive/src/utils/: mod.rs  string_expr.rs
crates/vct_reflect/src/: __macro_exports.rs  cell.rs  is.rs  lib.rs
crates/vct_reflect/src/access/: accessor.rs  mod.rs  path.rs  path_access.rs  string_parser.rs
crates/vct_reflect/src/impls/: mod.rs  native_tuple.rs
crates/vct_reflect/src/impls/native/: mod.rs  native_basic.rs  native_number.rs  native_string.rs  native_tuple.rs
crates/vct_reflect/src/info/: array_info.rs  attributes.rs  docs_macro.rs  enum_info.rs  fields.rs  generics.rs  list_info.rs  map_info.rs  mod.rs  opaque_info.rs  set_info.rs  struct_info.rs  tuple_info.rs  tuple_struct_info.rs  type_info_impl.rs  type_path.rs  type_struct.rs  typed.rs  variant_info.rs
crates/vct_reflect/src/ops/: apply_error.rs  array_impl.rs  clone_error.rs  enum_impl.rs  kind.rs  list_impl.rs  map_impl.rs  mod.rs  set_impl.rs  struct_impl.rs  tuple_impl.rs  tuple_struct_impl.rs  variant_impl.rs
crates/vct_reflect/src/reflect/: from_reflect.rs  mod.rs  partial_reflect.rs  reflect_impl.rs  reflectable.rs
crates/vct_reflect/src/registry/: from_type.rs  mod.rs  type_registry.rs  type_trait.rs
crates/vct_reflect/src/registry/traits/: default.rs  deserialize.rs  from_ptr.rs  from_reflect.rs  mod.rs  serialize.rs
crates/vct_reflect/src/serde/: mod.rs  skip_field.rs
crates/vct_reflect/src/serde/de/: array_visitor.rs  deserializer.rs  enum_visitor.rs  list_visitor.rs  map_visitor.rs  mod.rs  option_visitor.rs  processor.rs  set_visitor.rs  struct_like_utils.rs  struct_visitor.rs  tuple_like_utils.rs  tuple_struct_visitor.rs  tuple_visitor.rs
crates/vct_reflect/src/serde/ser/: array_serializer.rs  enum_serializer.rs  list_serializer.rs  map_serializer.rs  mod.rs  processor.rs  serializer.rs  set_serializer.rs  struct_serializer.rs  tuple_serializer.rs  tuple_struct_serializer.rs
crates/vct_reflect/src/type_data/: apply_error.rs  dynamic_struct.rs  mod.rs  partial_reflect.rs  reflect.rs
crates/vct_reflect/src/type_info/: array_info.rs  attributes.rs  docs_macro.rs  enum_info.rs  fields.rs  generics.rs  list_info.rs  map_info.rs  mod.rs  opaque_info.rs  set_info.rs  struct_info.rs  tuple_info.rs  tuple_struct_info.rs  type_info_impl.rs  type_struct.rs  typed.rs  variant_info.rs
crates/vct_utils/: Cargo.toml  README.md
crates/vct_utils/src/: debug.rs  debug_info.rs  default.rs  hash.rs  is.rs  lib.rs  maps.rs  on_drop.rs  once.rs  parallel_queue.rs
crates/vct_utils/src/cell/: mod.rs  sync_cell.rs  sync_unsafe_cell.rs
crates/vct_utils/src/collections/: hash_map.rs  hash_set.rs  hash_table.rs  maps.rs  mod.rs
crates/vct_utils/src/name/: debug_name.rs  mod.rs  short_name.rs
src/: lib.rs
