[package]
name = "ecs-demo"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/vct_ecs",
    "crates/vct_platform",
    "crates/vct_ptr",
    "crates/vct_reflect",
    "crates/vct_tasks",
    "crates/vct_utils"
]

[dependencies]
vct_ptr = { path = "crates/vct_ptr"}
vct_reflect = { path = "crates/vct_reflect" }


[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
unsafe_code = "deny"

[lints.clippy]
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

[lints.rust]
unsafe_code = "deny"
