[package]
name = "vct"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/vct_cfg",
    "crates/vct_ecs",
    "crates/vct_os",
    "crates/vct_ptr",
    "crates/vct_reflect",
    "crates/vct_tasks",
    "crates/vct_utils"
]

[dependencies]
vct_cfg = { path = "crates/vct_cfg" }
vct_ptr = { path = "crates/vct_ptr" }
vct_os = { path = "crates/vct_os" }
vct_utils = { path = "crates/vct_utils" }
vct_reflect = { path = "crates/vct_reflect" }
vct_tasks = { path = "crates/vct_tasks" }
vct_ecs = { path = "crates/vct_ecs" }

[workspace.lints.clippy]
needless_lifetimes = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
needless_lifetimes = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
