[package]
name = "vct_os"
version = "0.1.0"
edition = "2024"

[features]
# 目前要求必须启用 std
default = ["std"]

std = [
  "vct_cfg/std",
  "wasm-bindgen-futures?/std",
  "js-sys?/std",
  "wasm-bindgen?/std",
]

web = [
  "std",
  "dep:web-time",
  "dep:wasm-bindgen-futures",
  "dep:js-sys",
  "dep:wasm-bindgen",
]

[dependencies]

vct_cfg = { path = "../vct_cfg", default-features = false, version = "0.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { version = "1.1", default-features = false, optional = true }
wasm-bindgen-futures = { version = "0.4", default-features = false, optional = true }
js-sys = { version = "0.3", default-features = false, optional = true }
wasm-bindgen = { version = "0.2", default-features = false, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
