[package]
name = "vct_reflect"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "auto_register_inventory"]

std = [
    "vct_cfg/std",
    "vct_utils/std",
    "vct_os/std",
    "serde/std",
    "erased-serde/std",
]

reflect_docs = []

auto_register = [
    "vct_reflect_derive/auto_register"
]

auto_register_inventory = [
    "auto_register",
    "dep:inventory",
]



[dependencies]
vct_reflect_derive = { path = "derive" }
vct_cfg = { path = "../vct_cfg", default-features = false }
vct_utils = { path = "../vct_utils", default-features = false }
vct_os = { path = "../vct_os", default-features = false }

# auto_register_inventory
inventory = { version = "0.3", optional = true }

serde = { version = "1", default-features = false, features = ["alloc"] }
erased-serde = { version = "0.4", default-features = false, features = ["alloc"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
