[package]
name = "vct_utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["parallel"]

parallel = ["std", "dep:thread_local"]

std = [
  "alloc",
  "vct_os/std",
  "foldhash/std",
  "serde?/std",
]

alloc = [
  "vct_os/alloc",
  "disqualified/alloc",
  "dep:hashbrown",
  "serde?/alloc",
]

debug = ["alloc"]

serialize = ["dep:serde", "hashbrown/serde"]
rayon = ["dep:rayon", "hashbrown/rayon"]

[dependencies]

vct_os = { path = "../vct_os", default-features = false, version = "0.1.0" }

disqualified = { version = "1.0", default-features = false }
thread_local = { version = "1.0", optional = true }

# 哈希容器相关库
foldhash = { version = "0.2.0", default-features = false }
hashbrown = { version = "0.16.0", features = [
  "equivalent",
  "raw-entry",
], optional = true, default-features = false }
serde = { version = "1", default-features = false, optional = true }
rayon = { version = "1", default-features = false, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

