[package]
name = "vct_utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["parallel"]

parallel = ["std", "dep:thread_local"]

std = [
  "vct_cfg/std",
  "foldhash/std",
  "serde?/std",
]

debug = []

serde = ["dep:serde", "hashbrown/serde"]
rayon = ["dep:rayon", "hashbrown/rayon"]

[dependencies]

vct_cfg = { path = "../vct_cfg", default-features = false, version = "0.1.0" }

# Parallel
thread_local = { version = "1.0", optional = true }

# Hash Container
foldhash = { version = "0.2.0", default-features = false }
hashbrown = { version = "0.16.1", features = [
  "equivalent",
  "raw-entry",
], default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true }
rayon = { version = "1", default-features = false, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

