[package]
name = "vct_reflect_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
default = []

reflect_docs = []

auto_register = []


[dependencies]
vct_macro_utils = { path = "../../vct_macro_utils" }

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

